--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "react-theme-provider": "^0.1.3",
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.5",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
@@ -32,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
